--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h1 class="home__title">Hola, <br>Soy <span class="home__title-color"> Diego Mitma
                     </span><br>Frontend Developer</h1>
                 <a href="#" class="button">Contact</a>
-                <a href="#" class="button">Descargar CV</a>
+                <a download href="./assets/js/CV Diego Mitma.pdf" class="button">Descargar CV</a>
             </div>
 
             <div class="home__social">
