--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h1 class="home__title">Hola, <br>Soy <span class="home__title-color"> Diego Mitma
                     </span><br>Frontend Developer</h1>
                 <a href="#" class="button">Contact</a>
-                <a download href="./assets/js/CV Diego Mitma.pdf" class="button">Descargar CV</a>
+                <a download="" href="./assets/js/CV Diego Mitma.pdf" class="button">Descargar CV</a>
             </div>
 
             <div class="home__social">
@@ -244,22 +244,46 @@
                 <!-- Work 01 -->
                 <div class="work__img">
                     <img src="./assets/img/work1.jpg" alt="">
+
+                    <div class="portfolio__link">
+                        <a href="" class="portfolio__link-name">View details</a>
+                    </div>
                 </div>
+
                 <!-- Work 02 -->
                 <div class="work__img">
                     <img src="./assets/img/work2.jpg" alt="">
+
+                    <div class="portfolio__link">
+                        <a href="" class="portfolio__link-name">View details</a>
+                    </div>
                 </div>
+
                 <!-- Work 03 -->
                 <div class="work__img">
                     <img src="./assets/img/work3.jpg" alt="">
+
+                    <div class="portfolio__link">
+                        <a href="" class="portfolio__link-name">View details</a>
+                    </div>
                 </div>
+
                 <!-- Work 04 -->
                 <div class="work__img">
                     <img src="./assets/img/work4.jpg" alt="">
+
+                    <div class="portfolio__link">
+                        <a href="" class="portfolio__link-name">View details</a>
+                    </div>
                 </div>
+
                 <!-- Work 05 -->
                 <div class="work__img">
                     <img src="./assets/img/work5.jpg" alt="">
+
+                    <div class="portfolio__link">
+                        <a href="" class="portfolio__link-name">View details</a>
+                    </div>
                 </div>
             </div>
         </section>
