--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <img src="./assets/img/work1.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="" class="portfolio__link-name">View details</a>
+                        <a href="" class="portfolio__link-name">Holiii</a>
                     </div>
                 </div>
 
