add links hover work

--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
                     <img src="./assets/img/work1.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="" class="portfolio__link-name">Holiii</a>
+                        <a href="" class="portfolio__link-name"><i class="bx bxl-github"></i></a>
+                        <a href="" class="portfolio__link-name"><i class="bx bx-link"></i></a>
                     </div>
                 </div>
 
@@ -255,7 +256,8 @@
                     <img src="./assets/img/work2.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="" class="portfolio__link-name">View details</a>
+                        <a href="" class="portfolio__link-name"><i class="bx bxl-github"></i></a>
+                        <a href="" class="portfolio__link-name"><i class="bx bx-link"></i></a>
                     </div>
                 </div>
 
@@ -264,7 +266,8 @@
                     <img src="./assets/img/work3.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="" class="portfolio__link-name">View details</a>
+                        <a href="" class="portfolio__link-name"><i class="bx bxl-github"></i></a>
+                        <a href="" class="portfolio__link-name"><i class="bx bx-link"></i></a>
                     </div>
                 </div>
 
@@ -273,16 +276,16 @@
                     <img src="./assets/img/work4.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="" class="portfolio__link-name">View details</a>
+                        <p style="font-size: 2rem;">Coming Soon</p>
                     </div>
                 </div>
 
                 <!-- Work 05 -->
                 <div class="work__img">
                     <img src="./assets/img/work5.jpg" alt="">
-
+                    
                     <div class="portfolio__link">
-                        <a href="" class="portfolio__link-name">View details</a>
+                        <p style="font-size: 2rem;">Coming Soon</p>
                     </div>
                 </div>
             </div>
