--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link  rel="icon"   href="./assets/img/favicon.png.png" type="image/png" />
     <title>PortFolio | Diego Mitma Ariza</title>
+
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRT30JYNFG"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-BRT30JYNFG');
+        </script>
 </head>
 
 <body>
