--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                                 </div>
 
                                 <div class="skills-name">
-                                    <i class="bx bxl-nodejs skills__icon"></i>
-                                    <p class="skills-text-icon">Node JS</p>
+                                    <i class='bx bxs-bar-chart-alt-2 skills__icon'></i>
+                                    <p class="skills-text-icon">Google Analytics</p>
                                 </div>
 
                                 <div class="skills-name">
@@ -256,8 +256,8 @@
                     <img src="./assets/img/work1.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="" class="portfolio__link-name"><i class="bx bxl-github"></i></a>
-                        <a href="" class="portfolio__link-name"><i class="bx bx-link"></i></a>
+                        <a href="https://diegomitari.github.io/Javascript-Project-CoderHouse/" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
+                        <a href="https://github.com/DiegoMitari/Javascript-Project-CoderHouse" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
                     </div>
                 </div>
 
@@ -266,8 +266,8 @@
                     <img src="./assets/img/work2.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="" class="portfolio__link-name"><i class="bx bxl-github"></i></a>
-                        <a href="" class="portfolio__link-name"><i class="bx bx-link"></i></a>
+                        <a href="https://diegomitari.github.io/landingpage01/" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
+                        <a href="https://github.com/DiegoMitari/landingpage01" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
                     </div>
                 </div>
 
