--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
                     <img src="./assets/img/work1.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="https://diegomitari.github.io/Javascript-Project-CoderHouse/" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
-                        <a href="https://github.com/DiegoMitari/Javascript-Project-CoderHouse" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
+                        <a  href="https://github.com/DiegoMitari/Javascript-Project-CoderHouse" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
+                        <a href="https://diegomitari.github.io/Javascript-Project-CoderHouse/" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
                     </div>
                 </div>
 
@@ -266,8 +266,8 @@
                     <img src="./assets/img/work2.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="https://diegomitari.github.io/landingpage01/" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
-                        <a href="https://github.com/DiegoMitari/landingpage01" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
+                        <a  href="https://github.com/DiegoMitari/landingpage01" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
+                        <a  href="https://diegomitari.github.io/landingpage01/" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
                     </div>
                 </div>
 
