--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="home__data">
                 <h1 class="home__title">Hola, <br>Soy <span class="home__title-color"> Diego Mitma
                     </span><br>Frontend Developer</h1>
-                <a href="#" class="button">Contact</a>
+                <a href="#contact" class="button">Contact</a>
                 <a download="" href="./assets/js/CV Diego Mitma.pdf" class="button">Descargar CV</a>
             </div>
 
@@ -139,8 +139,8 @@
                                 </div>
 
                                 <div class="skills-name">
-                                    <i class='bx bxs-bar-chart-alt-2 skills__icon'></i>
-                                    <p class="skills-text-icon">Google Analytics</p>
+                                    <i class="bx bxs-bar-chart-alt-2 skills__icon"></i>
+                                    <p class="skills-text-icon">Analytics</p>
                                 </div>
 
                                 <div class="skills-name">
@@ -256,8 +256,16 @@
                     <img src="./assets/img/work1.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a  href="https://github.com/DiegoMitari/Javascript-Project-CoderHouse" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
-                        <a href="https://diegomitari.github.io/Javascript-Project-CoderHouse/" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
+                        <div class="portfolio__link-info">
+                            <span>Simulador de Créditos | Fintech</span> <br>
+                            <small>Proyecto Javascript y Jquery</small> <br>
+                            <small>CoderHouse</small>
+
+                        </div>
+                        <div>
+                            <a  href="https://github.com/DiegoMitari/Javascript-Project-CoderHouse" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
+                            <a href="https://diegomitari.github.io/Javascript-Project-CoderHouse/" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
+                        </div>
                     </div>
                 </div>
 
@@ -266,8 +274,14 @@
                     <img src="./assets/img/work2.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a  href="https://github.com/DiegoMitari/landingpage01" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
-                        <a  href="https://diegomitari.github.io/landingpage01/" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
+                        <div class="portfolio__link-info">
+                            <span>Landing Page 01</span> <br>
+                            <small>HTML, CSS, JavaScript</small>
+                        </div>
+                        <div>
+                            <a  href="https://github.com/DiegoMitari/landingpage01" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
+                            <a  href="https://diegomitari.github.io/landingpage01/" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
+                        </div>
                     </div>
                 </div>
 
@@ -276,8 +290,14 @@
                     <img src="./assets/img/work3.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="" class="portfolio__link-name"><i class="bx bxl-github"></i></a>
-                        <a href="" class="portfolio__link-name"><i class="bx bx-link"></i></a>
+                        <div class="portfolio__link-info">
+                            <span>Landing Page 02</span> <br>
+                            <small>HTML, CSS, JavaScript</small>
+                        </div>
+                        <div>
+                            <a href="" class="portfolio__link-name"><i class="bx bxl-github"></i></a>
+                            <a href="" class="portfolio__link-name"><i class="bx bx-link"></i></a>
+                        </div>
                     </div>
                 </div>
 
