add new project work

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
                             <small>HTML, CSS, JavaScript</small>
                         </div>
                         <div>
-                            <a href="" class="portfolio__link-name"><i class="bx bxl-github"></i></a>
-                            <a href="" class="portfolio__link-name"><i class="bx bx-link"></i></a>
+                            <a href="https://github.com/DiegoMitari/Page-Web" class="portfolio__link-name" target=”_blank”><i class="bx bxl-github"></i></a>
+                            <a href="https://diegomitari.github.io/Page-Web/" class="portfolio__link-name" target=”_blank”><i class="bx bx-link"></i></a>
                         </div>
                     </div>
                 </div>
