--- a/index.html
+++ b/index.html
@@ -327,13 +327,27 @@
             <h2 class="section-title">Contact</h2>
 
             <div class="contact__container bd-grid">
-                <form action="" class="contact__form">
+                <!-- <form action="" class="contact__form">
                     <input type="text" placeholder="Name" class="contact__input">
                     <input type="mail" placeholder="Email" class="contact__input">
                     <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
 
                     <input type="button" value="Send" class="contact__button button">
-                </form>
+                </form> -->
+                <div class="">
+                    <h3>Cellphone</h3>
+                    <p>51 992 998 907</p>
+                </div>
+
+                <div class="">
+                    <h3>Email</h3>
+                    <p>diego89ma@gmail.com</p>
+                </div>
+
+                <div class="">
+                    <h3>City</h3>
+                    <p>Lima, Perú</p>
+                </div>
             </div>
         </section>
     </main>
