--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
                     <input type="button" value="Send" class="contact__button button">
                 </form> -->
-                <div class="">
+                <div class="contact__item">
                     <h3>Cellphone</h3>
                     <p>51 992 998 907</p>
                 </div>
