--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="work__container bd-grid">
                 <!-- Work 01 -->
                 <div class="work__img">
-                    <img src="./assets/img/work1.png" alt="">
+                    <img src="./assets/img/work1.PNG" alt="">
 
                     <div class="portfolio__link">
                         <div class="portfolio__link-info">
@@ -271,7 +271,7 @@
 
                 <!-- Work 02 -->
                 <div class="work__img">
-                    <img src="./assets/img/work2.png" alt="">
+                    <img src="./assets/img/work2.PNG" alt="">
 
                     <div class="portfolio__link">
                         <div class="portfolio__link-info">
