--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 <div>
                     <h2 class="about__subtitle">Me llamo Diego Mitma Ariza</h2>
-                    <p class="about__text">Frontend Developer Jr. 🚀</p>
+                    <p class="about__text"><Frontend Developer Jr./> 🚀</p>
                     <br>
                     <p class="about__text">Estudie Ingenieria Industrial en la UNMSM, luego de 06 años trabajando como tal
                         👷, encontré mi verdadera pasión en el Desarrollo Web. <br> Actualmente me encuentro mejorando mis skills como
