--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="home bd-grid" id="home">
             <div class="home__data">
                 <h1 class="home__title">Hola, <br>Soy <span class="home__title-color"> Diego Mitma
-                    </span><br>Frontend Developer</h1>
+                    </span><br><Frontend Developer></h1>
                 <a href="#contact" class="button">Contact</a>
                 <a download="" href="./assets/js/CV Diego Mitma.pdf" class="button">Descargar CV</a>
             </div>
@@ -84,7 +84,7 @@
 
                 <div>
                     <h2 class="about__subtitle">Me llamo Diego Mitma Ariza</h2>
-                    <p class="about__text"><Frontend Developer Jr./> 🚀</p>
+                    <p class="about__text">Frontend Developer Jr. 🚀</p>
                     <br>
                     <p class="about__text">Estudie Ingenieria Industrial en la UNMSM, luego de 06 años trabajando como tal
                         👷, encontré mi verdadera pasión en el Desarrollo Web. <br> Actualmente me encuentro mejorando mis skills como
