center contact item

--- a/index.html
+++ b/index.html
@@ -327,24 +327,18 @@
             <h2 class="section-title">Contact</h2>
 
             <div class="contact__container bd-grid">
-                <!-- <form action="" class="contact__form">
-                    <input type="text" placeholder="Name" class="contact__input">
-                    <input type="mail" placeholder="Email" class="contact__input">
-                    <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-
-                    <input type="button" value="Send" class="contact__button button">
-                </form> -->
+        
                 <div class="contact__item">
                     <h3>Cellphone</h3>
                     <p>51 992 998 907</p>
                 </div>
 
-                <div class="">
+                <div class="contact__item">
                     <h3>Email</h3>
                     <p>diego89ma@gmail.com</p>
                 </div>
 
-                <div class="">
+                <div class="contact__item">
                     <h3>City</h3>
                     <p>Lima, Perú</p>
                 </div>
